# G1R-TemplateMod

./: CMakeLists.txt  G1R_enums.hpp  GamePlayEffect_Proxy.hpp  README.md  RuneDefinition_Proxy.hpp  Shared_Proxy.hpp  WeaponDefinition_Proxy.hpp  dllmain.cpp  g1r-mod.rc  resource.h
SDK/: AB_NH_IKLayer.hpp  AC_StringDetector.hpp  AIAgentCharacter_OrcF.hpp  AIAgentCharacter_OrcM.hpp  AIAgentCharacter_Orc_Base.hpp  AIAgentCharacter_Skeleton.hpp  AIAgentCharacter_XardasSkeleton.hpp  AIModule.hpp  AL_B3_D0.hpp  A_Man_RiderIk.hpp  A_Man_Riding_AnimBP.hpp  AlkimiaActorMergeTools.hpp  AlkimiaDevConsole.hpp  AlkimiaFastKismetRenderingLibrary.hpp  AlkimiaLaunchEmbargo.hpp  AlkimiaLaunchEmbargo_enums.hpp  AlkimiaLightweightActors.hpp  AlkimiaLightweightActors_enums.hpp  AlkimiaSteamExtensions.hpp  AlkimiaStoryFileImport.hpp  AlkimiaStoryFileImport_enums.hpp  AngelscriptCode.hpp  AngelscriptCode_enums.hpp  AngelscriptGAS.hpp  Angelscript_enums.hpp  AnimNotify_FMODPlayEvent.hpp  AnimationBudgetAllocator.hpp  AnimationNodes.hpp  AnimationWarpingRuntime.hpp  AnimationWarpingRuntime_enums.hpp  ArchVisCharacter.hpp  AsanaBugTracker.hpp  AsyncLoadingScreen.hpp  AvidDNxMedia.hpp  BE_SurfaceMesh_enums.hpp  BE_UnderwaterVisibility_enums.hpp  BE_WorldBrushType_enums.hpp  BFGCrowdlife.hpp  BFGDataExtensions.hpp  BFGInstancedSkeletalMesh.hpp  (+687 more)
proxy/: Shared_Proxy.hpp  Spell_Proxy.hpp  WeaponDefinition_Proxy.hpp
scripts/: AttributeConfig.h  AttributePatcherBase.cpp  AttributePatcherBase.h  GEAttributePatcher.cpp  GEAttributePatcher.h  GEModifierConfig.h  SpellAttributePatcher.cpp  SpellAttributePatcher.h  WeaponAttributePatcher.cpp  WeaponAttributePatcher.h  scripts.cpp  scripts.h
